<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    tools:context=".MainActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvPricesList"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:textSize="20sp"
        android:text="@string/arrayPrice"
        android:gravity="center"
        android:background="@color/design_default_color_primary"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilPrices"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPricesList">

        <EditText
            android:id="@+id/etPrices"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:autofillHints="enter price"
            android:hint="@string/enter_price"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btnAdd"
        app:layout_constraintTop_toTopOf="@id/ilPrices"
        app:layout_constraintStart_toEndOf="@id/ilPrices"
        app:layout_constraintBottom_toBottomOf="@id/ilPrices"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilDiscount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ilPrices"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/etDiscount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:autofillHints="enter price"
            android:hint="@string/etDiscount"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilOffset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ilDiscount"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/etOffset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:autofillHints="enter price"
            android:hint="@string/etOffset"
            android:textSize="@dimen/etTextSize"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilReadLength"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ilOffset"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/etReadLength"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:autofillHints="enter price"
            android:hint="@string/etReadLength"
            android:textSize="13sp"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnApply"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_margin="30dp"
        android:text="@string/btnApply"
        app:layout_constraintTop_toBottomOf="@+id/ilReadLength"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvPriceAfterDiscount"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_margin="30dp"
        android:textSize="20sp"
        android:text="@string/arrayPriceAfterDiscount"
        android:gravity="center"
        android:background="@color/design_default_color_primary"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/btnApply"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>